@@ -9,17 +9,14 @@ import com.umc.gusto.domain.group.model.request.JoinGroupRequest;
 import com.umc.gusto.domain.group.model.request.PostGroupRequest;
 import com.umc.gusto.domain.group.model.request.TransferOwnershipRequest;
 import com.umc.gusto.domain.group.model.request.UpdateGroupRequest;
-import com.umc.gusto.domain.group.model.response.GetGroupMemberResponse;
-import com.umc.gusto.domain.group.model.response.GetGroupResponse;
-import com.umc.gusto.domain.group.model.response.GroupListResponse;
-import com.umc.gusto.domain.group.model.response.GetInvitationCodeResponse;
-import com.umc.gusto.domain.group.model.response.TransferOwnershipResponse;
-import com.umc.gusto.domain.group.model.response.GetGroupsResponse;
-import com.umc.gusto.domain.group.model.response.UpdateGroupResponse;
+import com.umc.gusto.domain.group.model.response.*;
 import com.umc.gusto.domain.group.repository.GroupListRepository;
 import com.umc.gusto.domain.group.repository.GroupMemberRepository;
 import com.umc.gusto.domain.group.repository.GroupRepository;
+import com.umc.gusto.domain.review.entity.Review;
 import com.umc.gusto.domain.review.repository.ReviewRepository;
+import com.umc.gusto.domain.route.entity.Route;
+import com.umc.gusto.domain.store.entity.Store;
 import com.umc.gusto.domain.store.repository.StoreRepository;
 import com.umc.gusto.domain.group.repository.InvitationCodeRepository;
 import com.umc.gusto.domain.route.repository.RouteRepository;
@@ -30,12 +27,15 @@ import com.umc.gusto.global.exception.Code;
 import com.umc.gusto.global.exception.GeneralException;
 import com.umc.gusto.global.exception.customException.NotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.apache.commons.lang3.RandomStringUtils;
 
-
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -48,11 +48,11 @@ public class GroupServiceImpl implements GroupService{
     private final InvitationCodeRepository invitationCodeRepository;
     private final GroupListRepository groupListRepository;
     private final RouteRepository routeRepository;
-  
     private static final int INVITE_CODE_LENGTH = 12;
-
     private final StoreRepository storeRepository;
     private final ReviewRepository reviewRepository;
+    private static final int GROUP_LIST_FIRST_PAGE = 8;
+    private static final int GROUP_LIST_PAGE = 6;
 
 
     public void createGroup(User owner, PostGroupRequest postGroupRequest){
@@ -86,7 +86,13 @@ public class GroupServiceImpl implements GroupService{
         Group group = groupRepository.findGroupByGroupIdAndStatus(groupId, BaseEntity.Status.ACTIVE)
                 .orElseThrow(()->new GeneralException(Code.FIND_FAIL_GROUP));
         Long ownerMemberId = groupMemberRepository.findGroupMemberIdByGroupAndUser(group, group.getOwner());
-        List<GetGroupMemberResponse> groupMembersDto = getGroupMembers(groupId);
+        List<GetGroupMemberResponse> groupMembersDto = groupMemberRepository.findGroupMembersByGroup(group).stream()
+                .map(groupMember -> GetGroupMemberResponse.builder()
+                        .groupMemberId(groupMember.getGroupMemberId())
+                        .nickname(groupMember.getUser().getNickname())
+                        .profileImg(groupMember.getUser().getProfileImage())
+                        .build())
+                .collect(Collectors.toList());
         return GetGroupResponse.builder()
                 .groupId(group.getGroupId())
                 .groupName(group.getGroupName())
@@ -139,26 +145,26 @@ public class GroupServiceImpl implements GroupService{
         group.updateStatus(BaseEntity.Status.INACTIVE);
     }
 
-    public void joinGroup(User user, Long groupId, JoinGroupRequest joinGroupRequest){
-        Group group = groupRepository.findGroupByGroupIdAndStatus(groupId, BaseEntity.Status.ACTIVE)
+    public void joinGroup(User user, JoinGroupRequest joinGroupRequest){
+        Group group = groupRepository.findGroupByCodeAndStatus(joinGroupRequest.getCode(), BaseEntity.Status.ACTIVE)
                 .orElseThrow(()->new GeneralException(Code.FIND_FAIL_GROUP));
-        String invitationCode = invitationCodeRepository.findCodeByGroup(group);
 
-        // 초대 코드 확인
-        if(joinGroupRequest.getCode().equals(invitationCode)){
-            // 그룹 참여
-            User joinUser = userRepository.findById(user.getUserId())
-                    .orElseThrow(()->new GeneralException(Code.DONT_EXIST_USER));
-
-            GroupMember groupMember = GroupMember.builder()
-                    .group(group)
-                    .user(joinUser)
-                    .build();
-
-            groupMemberRepository.save(groupMember);
-        }else{
-            throw new GeneralException(Code.INVALID_INVITATION_CODE);
+        // 이미 그룹에 참여한 유저인지 확인
+        boolean isMember = groupMemberRepository.existsGroupMemberByGroupAndUser(group, user);
+        if (isMember) {
+            throw new GeneralException(Code.ALREADY_JOINED_GROUP);
         }
+
+        // 그룹 참여
+        User joinUser = userRepository.findById(user.getUserId())
+                .orElseThrow(()->new GeneralException(Code.USER_NOT_FOUND));
+
+        GroupMember groupMember = GroupMember.builder()
+                .group(group)
+                .user(joinUser)
+                .build();
+
+        groupMemberRepository.save(groupMember);
     }
 
     public void leaveGroup(User user, Long groupId){
@@ -185,11 +191,11 @@ public class GroupServiceImpl implements GroupService{
     }
 
     @Transactional(readOnly = true)
-    public List<GetGroupsResponse> getUserGroups(User user) {
-        List<Long> groupIds = groupMemberRepository.findGroupIdsByUser(user);
-        List<Group> groups = groupRepository.findGroupsByGroupIdInAndStatus(groupIds, BaseEntity.Status.ACTIVE);
-        return groups.stream()
-                .map(group -> {
+    public Map<String, Object> getUserGroups(User user, Long lastGroupId, int size) {
+        Page<Group> groups = pagingGroup(user, lastGroupId, size);
+        boolean hasNext = groups.hasNext();
+
+        List<GetGroupsResponse> responses = groups.map(group -> {
                     int numMembers = groupMemberRepository.countGroupMembersByGroup(group);
                     int numRestaurants = groupListRepository.countGroupListsByGroup(group);
                     int numRoutes = routeRepository.countRoutesByGroupAndStatus(group, BaseEntity.Status.ACTIVE);
@@ -197,26 +203,59 @@ public class GroupServiceImpl implements GroupService{
                     return GetGroupsResponse.builder()
                             .groupId(group.getGroupId())
                             .groupName(group.getGroupName())
+                            .isOwner(user.getUserId().equals(group.getOwner().getUserId()))
                             .numMembers(numMembers)
                             .numRestaurants(numRestaurants)
                             .numRoutes(numRoutes)
                             .build();
-                })
-                .collect(Collectors.toList());
+                }).toList();
+
+        Map<String, Object> map = new HashMap<>();
+        map.put("groups", responses);
+        map.put("hasNext", hasNext);
+        return map;
+    }
+
+    private Page<Group> pagingGroup(User user, Long lastGroupId, int size){
+        // 그룹 목록 커서 페이징 처리
+        Pageable pageable = PageRequest.of(0, size, Sort.by(Sort.Direction.DESC, "groupId"));
+        List<Long> groupIds = groupMemberRepository.findGroupIdsByUser(user);
+
+        if (lastGroupId == null) {
+            return groupRepository.findGroupsByGroupIdInAndStatus(groupIds, BaseEntity.Status.ACTIVE, pageable);
+        }else{
+            return groupRepository.findGroupsByStatusAndGroupIdInLessThan(groupIds, BaseEntity.Status.ACTIVE, lastGroupId, pageable);
+        }
     }
 
     @Transactional(readOnly = true)
-    public List<GetGroupMemberResponse> getGroupMembers(Long groupId){
-        Group group = groupRepository.findGroupByGroupIdAndStatus(groupId, BaseEntity.Status.ACTIVE)
-                .orElseThrow(()->new GeneralException(Code.FIND_FAIL_GROUP));
-        List<GroupMember> groupMembers = groupMemberRepository.findGroupMembersByGroup(group);
-        return groupMembers.stream()
-                .map(groupMember -> GetGroupMemberResponse.builder()
+    public Map<String, Object> getGroupMembers(Long groupId, Long lastMemberId, int size){
+        Page<GroupMember> groupMembers = pagingGroupMember(groupId, lastMemberId, size);
+        boolean hasNext = groupMembers.hasNext();
+
+        List<GetGroupMemberResponse> responses = groupMembers.map(groupMember -> GetGroupMemberResponse.builder()
                         .groupMemberId(groupMember.getGroupMemberId())
                         .nickname(groupMember.getUser().getNickname())
                         .profileImg(groupMember.getUser().getProfileImage())
-                        .build())
-                .collect(Collectors.toList());
+                        .build()).toList();
+
+        Map<String, Object> map = new HashMap<>();
+        map.put("groupMembers", responses);
+        map.put("hasNext", hasNext);
+        return map;
+    }
+
+    private Page<GroupMember> pagingGroupMember(Long groupId, Long lastMemberId, int size){
+        // 그룹 멤버 목록 커서 페이징 처리
+        Pageable pageable = PageRequest.of(0, size, Sort.by(Sort.Direction.DESC, "groupMemberId"));
+        Group group = groupRepository.findGroupByGroupIdAndStatus(groupId, BaseEntity.Status.ACTIVE)
+                .orElseThrow(()->new GeneralException(Code.FIND_FAIL_GROUP));
+
+        if (lastMemberId == null) {
+            return groupMemberRepository.findGroupMembersByGroup(group, pageable);
+        }else{
+            return groupMemberRepository.findGroupMembersByGroupLessThan(group, lastMemberId, pageable);
+        }
     }
 
     public TransferOwnershipResponse transferOwnership(User owner, Long groupId, TransferOwnershipRequest transferOwnershipRequest){
@@ -250,11 +289,18 @@ public class GroupServiceImpl implements GroupService{
                 .orElseThrow(() -> new GeneralException(Code.FIND_FAIL_GROUP));
         // 그룹 구성원인지 확인
         if(!groupMemberRepository.existsGroupMemberByGroupAndUser(group,user))
-            throw new GeneralException(Code.USER_NO_PERMISSION_FOR_GROUP);
+            throw new GeneralException(Code.USER_NOT_IN_GROUP);
+
+        Store store = storeRepository.findById(request.getStoreId()).orElseThrow(() -> new NotFoundException(Code.STORE_NOT_FOUND));
+
+        //이미 존재하는 상점인지 확인
+        if(groupListRepository.existsGroupListByGroupAndStore(group,store)){
+            throw new GeneralException(Code.ALREADY_ADD_GROUP_LIST);
+        }
 
         GroupList groupList =GroupList.builder()
                 .group(group)
-                .store(storeRepository.findById(request.getStoreId()).orElseThrow(() -> new NotFoundException(Code.STORE_NOT_FOUND)))
+                .store(store)
                 .user(user)
                 .build();
 
@@ -269,7 +315,7 @@ public class GroupServiceImpl implements GroupService{
             GroupList groupList = groupListRepository.findGroupListByGroupListId(gl).orElseThrow(() -> new GeneralException(Code.GROUPLIST_NOT_FROUND));
             // 그룹 구성원인지 확인
             if(!groupMemberRepository.existsGroupMemberByGroupAndUser(groupList.getGroup(),user))
-                throw new GeneralException(Code.USER_NO_PERMISSION_FOR_GROUP);
+                throw new GeneralException(Code.USER_NOT_IN_GROUP);
             // 그룹리스트 삭제
             groupListRepository.delete(groupList);
         }
@@ -277,24 +323,58 @@ public class GroupServiceImpl implements GroupService{
     }
 
     @Override
-    public List<GroupListResponse> getAllGroupList(Long groupId) {
+    public PagingResponse getAllGroupList(Long groupId, Long groupListId) {
+
         // 그룹 존재여부 확인
         Group group = groupRepository.findGroupByGroupIdAndStatus(groupId, BaseEntity.Status.ACTIVE)
                 .orElseThrow(() -> new GeneralException(Code.FIND_FAIL_GROUP));
-        // 그룹 내 모든 찜한 상점 조회 = 그룹리스트 조회
-        List<GroupList> groupLists = groupListRepository.findGroupListByGroup(group);
+
+        Page<GroupList> groupLists;
+        if(groupListId == null){
+            // 그룹 내 모든 찜한 상점 조회 = 그룹리스트 조회
+            groupLists = groupListRepository.findFirstGroupListOrderByDesc(group, Pageable.ofSize(GROUP_LIST_FIRST_PAGE));
+        }else{
+            // 그룹 내 모든 찜한 상점 조회 = 그룹리스트 조회
+            groupLists = groupListRepository.findGroupListByGroupOrderByCreatedAtDesc(group,groupListId, Pageable.ofSize(GROUP_LIST_PAGE));
+
+        }
+
 
         // 그룹 리스트에 해당하는 각 상점 정보 조회
-        return groupLists.stream().map(gl -> {
-            String reviewImg = reviewRepository.findTopReviewImageByStoreId(gl.getStore().getStoreId()).get(0);
+        List<GroupListResponse> list = groupLists.stream().map(gl -> {
+            Optional<Review> topReviewOptional = reviewRepository.findFirstByStoreOrderByLikedDesc(gl.getStore()); // 가장 좋아요가 많은 review
+            String reviewImg = topReviewOptional.map(Review::getImg1).orElse("");
             return GroupListResponse.builder()
                     .groupListId(gl.getGroupListId())
+                    .storeId(gl.getStore().getStoreId())
                     .storeName(gl.getStore().getStoreName())
-                    .profileImg(reviewImg)
+                    .storeProfileImg(reviewImg)
+                    .userProfileImg(gl.getUser().getProfileImage())
                     .address(gl.getStore().getAddress())
                     .build();
         }).collect(Collectors.toList());
 
+        return PagingResponse.builder()
+                .result(list)
+                .hasNext(groupLists.hasNext())
+                .build();
+
+
+    }
+
+    @Override
+    public void deleteRoute(Long routeId, User user, Long groupId) {
+        // 그룹 구성원인지 확인
+        Group group = groupRepository.findGroupByGroupIdAndStatus(groupId, BaseEntity.Status.ACTIVE)
+                .orElseThrow(()->new GeneralException(Code.FIND_FAIL_GROUP));
+        if(!groupMemberRepository.existsGroupMemberByGroupAndUser(group,user)){
+            throw new GeneralException(Code.USER_NOT_IN_GROUP);
+        }
+
+        Route route = routeRepository.findRouteByRouteIdAndStatus(routeId, BaseEntity.Status.ACTIVE)
+                .orElseThrow(() -> new GeneralException(Code.ROUTE_NOT_FOUND));
+        //루트 삭제 : soft delete // TODO:DB 최종 삭제 주기 체크
+        route.updateStatus(BaseEntity.Status.INACTIVE);
 
     }
 }
